# cli-timer

./: .gitignore  README.md  cli_timer.py  install.sh  package-lock.json  package.json  pyproject.toml  timer
.github/workflows/: npm-publish.yml
cli-timer/: main.py  stopwatch.py  timer.py
settings-ui/: go.mod  main.go  main_test.go
settings-ui/prebuilt/darwin-arm64/: cli-timer-settings-ui
settings-ui/prebuilt/darwin-x64/: cli-timer-settings-ui
settings-ui/prebuilt/linux-arm64/: cli-timer-settings-ui
settings-ui/prebuilt/linux-x64/: cli-timer-settings-ui
src/: index.js
