[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-timer"
version = "0.1.0"
description = "Simple CLI timer and stopwatch"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "rich",
]

[project.scripts]
timer = "cli_timer.main:main"
stopwatch = "cli_timer.main:main"
